--- a/StateByState/StateByState.csproj
+++ b/StateByState/StateByState.csproj
@@ -96,16 +96,28 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="CoreApplication.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecondPage.xaml.cs">
       <DependentUpon>SecondPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="SecondViewModel.cs" />
+    <Compile Include="ThirdFourPage.xaml.cs">
+      <DependentUpon>ThirdFourPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ThirdPage.xaml.cs">
+      <DependentUpon>ThirdPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ThirdThreePage.xaml.cs">
+      <DependentUpon>ThirdThreePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ThirdTwoPage.xaml.cs">
+      <DependentUpon>ThirdTwoPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ThrirdOnePage.xaml.cs">
+      <DependentUpon>ThrirdOnePage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -136,6 +148,26 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ThirdFourPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ThirdPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ThirdThreePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ThirdTwoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ThrirdOnePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BuiltToRoam.Lifecycle.UWP\BuiltToRoam.Lifecycle.UWP.csproj">
@@ -145,6 +177,10 @@
     <ProjectReference Include="..\BuiltToRoam.Lifecycle\BuiltToRoam.Lifecycle.csproj">
       <Project>{fa40c3d1-c786-4a96-89d3-78d3af17a437}</Project>
       <Name>BuiltToRoam.Lifecycle</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StateByState.Core\StateByState.Core.csproj">
+      <Project>{b03072fe-40a3-4507-bfd1-c904bb0fe1fa}</Project>
+      <Name>StateByState.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
