--- a/BuiltToRoam.General/BuiltToRoam.General.csproj
+++ b/BuiltToRoam.General/BuiltToRoam.General.csproj
@@ -5,16 +5,22 @@
     <MinimumVisualStudioVersion>10.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B03072FE-40A3-4507-BFD1-C904BB0FE1FA}</ProjectGuid>
+    <ProjectGuid>{FD17AD8E-6A3F-4C1D-A7CB-DCBF6A125897}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StateByState</RootNamespace>
-    <AssemblyName>StateByState.Core</AssemblyName>
+    <RootNamespace>BuiltToRoam</RootNamespace>
+    <AssemblyName>BuiltToRoam.General</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkProfile>Profile344</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <SccProjectName>SAK</SccProjectName>
+    <SccLocalPath>SAK</SccLocalPath>
+    <SccAuxPath>SAK</SccAuxPath>
+    <SccProvider>SAK</SccProvider>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
@@ -36,25 +42,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <ProjectReference Include="..\BuiltToRoam.General\BuiltToRoam.General.csproj">
-      <Project>{FD17AD8E-6A3F-4C1D-A7CB-DCBF6A125897}</Project>
-      <Name>BuiltToRoam.General</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BuiltToRoam.Lifecycle\BuiltToRoam.Lifecycle.csproj">
-      <Project>{fa40c3d1-c786-4a96-89d3-78d3af17a437}</Project>
-      <Name>BuiltToRoam.Lifecycle</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="CoreApplication.cs" />
-    <Compile Include="MainViewModel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SecondViewModel.cs" />
-    <Compile Include="ThirdViewModel.cs" />
-  </ItemGroup>
-  <ItemGroup>
+    <Compile Include="BaseConfiguration.cs" />
+    <Compile Include="ILogService.cs" />
     <None Include="app.config" />
+    <None Include="LogHelper.cs" />
+    <Compile Include="NotifyBase.cs" />
+    <Compile Include="ParameterEventArgs.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities.cs" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
