--- a/BuiltToRoam.Lifecycle.Win8x/packages.config
+++ b/BuiltToRoam.Lifecycle.Win8x/packages.config
@@ -3,4 +3,5 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="portable46-win81+wpa81" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="portable46-win81+wpa81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable46-win81+wpa81" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable46-win81+wpa81" />
 </packages>
