--- a/BuiltToRoam.Lifecycle.UWP/project.json
+++ b/BuiltToRoam.Lifecycle.UWP/project.json
@@ -1,5 +1,7 @@
 ﻿{
   "dependencies": {
+    "Autofac.Extras.CommonServiceLocator": "3.2.0",
+    "CommonServiceLocator": "1.3.0",
     "Microsoft.Bcl": "1.1.10",
     "Microsoft.Bcl.Async": "1.0.168",
     "Microsoft.Bcl.Build": "1.0.21",
