--- a/StateByState.Core/StateByState.Core.csproj
+++ b/StateByState.Core/StateByState.Core.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoreApplication.cs" />
+    <Compile Include="ISpecial.cs" />
     <Compile Include="MainViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecondViewModel.cs" />
