--- a/StateByState.Core/StateByState.Core.csproj
+++ b/StateByState.Core/StateByState.Core.csproj
@@ -51,6 +51,8 @@
     <Compile Include="ISpecial.cs" />
     <Compile Include="MainViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecondardyMainViewModel.cs" />
+    <Compile Include="SecondaryApplication.cs" />
     <Compile Include="SecondViewModel.cs" />
     <Compile Include="ThirdViewModel.cs" />
   </ItemGroup>
